--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-.eslintcache
 node_modules/
+out/
+build/
+.next/
 .env
+.vercel
 junk.*
-bundle.js
+junk/
+
+
+# temp while I develop on a laptop
+deno.*
