--- a/package.json
+++ b/package.json
@@ -1,42 +1,19 @@
 {
-  "name": "ml-search",
-  "version": "0.1.0",
-  "dependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
-    "express": "^4.17.1",
-    "express-favicon": "^2.0.1",
-    "path": "^0.12.7",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-bootstrap-icons": "^1.1.0",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "timeago.js": "^4.0.2"
-  },
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack.config.js --mode=production"
+    "build": "next build",
+    "dev": "next dev --turbo",
+    "start": "next start"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.1"
+  "dependencies": {
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "path": "^0.12.7",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
+    "react-bootstrap-icons": "^1.11.5",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.2",
+    "next": "latest",
+    "timeago.js": "^4.0.2"
   }
 }
